--- a/src/app/education-feature/education/education.component.html
+++ b/src/app/education-feature/education/education.component.html
@@ -1,10 +1,8 @@
 <div class="max-w-7xl mt-8 mb-12  mx-auto px-4 sm:px-6 lg:px-8">
   <div class="max-w-3xl mx-auto">
-    <!-- This example requires Tailwind CSS v2.0+ -->
+    <!-- data cards -->
     <div *ngFor="let e of (educations$ | async)" class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl mt-4">
       <div class="px-4 py-5 sm:px-6">
-
-
         <div class="flex flex-row">
           <div class="basis-[97%]">
             <h3 class="text-lg leading-6 font-bold text-white">{{e.diploma}}</h3>
@@ -16,7 +14,6 @@
             </button>
           </div>
         </div>
-
       </div>
       <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
         <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
@@ -34,14 +31,12 @@
             <dt class="text-sm font-medium text-white">Field of study</dt>
             <dd class="mt-1 text-sm text-white">{{e.fieldOfStudy}}</dd>
           </div>
-          <div class="sm:col-span-1">
+          <div *ngIf="e.website" class="sm:col-span-1">
             <dt class="text-sm font-medium text-white">Website</dt>
             <dd class="mt-1 text-sm text-white">{{e.website}}</dd>
           </div>
         </dl>
       </div>
-
-      <!-- This example requires Tailwind CSS v2.0+ -->
       <div class="flex justify-between">
       <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
         <input type="checkbox" (click)="toggleActive(e)"  *ngIf="e.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
@@ -54,23 +49,49 @@
       </div>
 
         <div class="flex justify-center">
-        <button (click)="onRemove(e.id)" class="text-red-600 hover:text-white bg-white rounded-xl mr-6 mb-4 w-10 h-10 hover:bg-Jorange  ">
+        <button (click)="showDeleteModal(e)" class="text-red-600 hover:text-white bg-white rounded-xl mr-6 mb-4 w-10 h-10 hover:bg-Jorange  ">
         <fa-icon transform="grow-7" [icon]="faTrashCan"></fa-icon>
       </button>
         </div>
     </div>
     </div>
-
     <div>
     <button (click)="onAdd()" class="ml-6 bg-gray-200 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
       <span class="text-lg font-bold text-Jblue">Add </span>
     </button>
     </div>
-
   </div>
 </div>
 
 
-
-
-
+<!-- modal -->
+<div *ngIf="showModal" class="fixed z-10 inset-0 overflow-y-auto" >
+  <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+    <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
+    <span class="hidden sm:inline-block sm:align-middle sm:h-screen">&#8203;</span>
+    <div class="relative inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+      <div class="hidden sm:block absolute top-0 right-0 pt-4 pr-4">
+        <button (click)="closeDeleteModal()" type="button" class="text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-0">
+          <span class="sr-only">Close</span>
+          <fa-icon transform="grow-8" [icon]="faXmark"></fa-icon>
+        </button>
+      </div>
+      <div class="sm:flex sm:items-start">
+        <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+          <fa-icon class="text-red-700" transform="grow-10" [icon]="faTriangleExclamation"></fa-icon>
+        </div>
+        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+          <h3 class="text-lg leading-6 font-medium text-gray-900">Remove: {{educationForm.value.diploma}}</h3>
+          <div class="mt-2">
+            <p class="text-sm text-gray-500">Are you sure you want to remove {{educationForm.value.diploma}} from your educations.</p>
+            <p class="text-sm text-gray-500 font-bold">this action cannot be undone!</p>
+          </div>
+        </div>
+      </div>
+      <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
+        <button (click)="onRemove(educationForm.value.id)" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-0 sm:ml-3 sm:w-auto sm:text-sm">Remove</button>
+        <button (click)="closeDeleteModal()" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:text-gray-500 focus:outline-none focus:ring-0 sm:mt-0 sm:w-auto sm:text-sm">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
