--- a/src/app/education-feature/education/education.component.html
+++ b/src/app/education-feature/education/education.component.html
@@ -1,11 +1,12 @@
-<div class="max-w-7xl mt-8 mb-12  mx-auto px-4 sm:px-6 lg:px-8">
+<div class="max-w-7xl mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 ">
   <div class="max-w-3xl mx-auto">
     <!-- data cards -->
-    <div *ngFor="let e of (educations$ | async)" class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl mt-4">
-      <div class="px-4 py-5 sm:px-6">
+    <div *ngFor="let e of myEducations$ | async" class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
+      <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
+
         <div class="flex flex-row">
-          <div class="basis-[97%]">
-            <h3 class="text-lg leading-6 font-bold text-white">{{e.diploma}}</h3>
+          <div class="basis-[97%] µ">
+            <h3 class="text-xl leading-6 font-bold text-white">{{e.diploma}}</h3>
             <p class="mt-1 max-w-2xl text-sm text-white">{{e.description}}</p>
           </div>
           <div class="flex justify-center">
@@ -14,26 +15,22 @@
             </button>
           </div>
         </div>
+
       </div>
       <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
-        <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
+        <dl class="grid grid-cols-1 gap-x-3 gap-y-8 sm:grid-cols-3">
           <div class="sm:col-span-1">
-            <dt class="text-sm font-medium text-white">School:</dt>
-            <dd class="mt-1 text-sm text-white">{{e.school}}</dd>
-            <dd class="mt-1 text-sm text-white">{{e.startDate}} tot {{e.endDate}}</dd>
+            <dt class="text-md font-bold text-white">School:</dt>
+            <dd class="mt-1 text-md text-white">{{e.school}} ({{e.country}})</dd>
+            <dd class="mt-1 text-lg text-white mt-2">{{e.startDate}} to {{e.endDate}}</dd>
           </div>
           <div class="sm:col-span-1">
-            <dt class="text-sm font-medium text-white">Address</dt>
-            <dd class="mt-1 text-sm text-white">{{e.street}} {{e.number}}</dd>
-            <dd class="mt-1 text-sm text-white">{{e.postalCode}} {{e.city}} ({{e.country}})</dd>
-          </div>
-          <div class="sm:col-span-1">
-            <dt class="text-sm font-medium text-white">Field of study</dt>
-            <dd class="mt-1 text-sm text-white">{{e.fieldOfStudy}}</dd>
+            <dt class="text-md font-bold text-white">Field of study:</dt>
+            <dd class="mt-1 text-md text-white">{{e.fieldOfStudy}}</dd>
           </div>
           <div *ngIf="e.website" class="sm:col-span-1">
-            <dt class="text-sm font-medium text-white">Website</dt>
-            <dd class="mt-1 text-sm text-white">{{e.website}}</dd>
+            <dt class="text-md font-bold text-white">Website:</dt>
+            <dd class="mt-1 text-md text-white">{{e.website}}</dd>
           </div>
         </dl>
       </div>
@@ -49,18 +46,55 @@
       </div>
 
         <div class="flex justify-center">
-        <button (click)="showDeleteModal(e)" class="text-red-600 hover:text-white bg-white rounded-xl mr-6 mb-4 w-10 h-10 hover:bg-Jorange  ">
+        <button (click)="showDeleteModal(e)" class="text-red-600 hover:text-white bg-white rounded-xl mr-6 mb-4 w-10 h-10 hover:bg-Jorange">
         <fa-icon transform="grow-7" [icon]="faTrashCan"></fa-icon>
       </button>
         </div>
     </div>
     </div>
     <div>
-    <button (click)="onAdd()" class="ml-6 bg-gray-200 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-      <span class="text-lg font-bold text-Jblue">Add </span>
-    </button>
+      <div class="pt-2 flex justify-end">
+      <button (click)="onAdd()"   class="justify-center hover:bg-Jorange bg-Jblue items-center h-10 w-48 rounded-xl mb-4 text-white font-bold text-2xl">
+          Add
+      </button>
+      </div>
     </div>
   </div>
+
+  <!-- pagination-->
+  <nav class="border-t border-gray-200 px-4 flex items-center justify-between sm:px-0">
+    <div class="-mt-px w-0 flex-1 flex">
+      <a href="#" class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300">
+        <!-- Heroicon name: solid/arrow-narrow-left -->
+        <svg class="mr-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+          <path fill-rule="evenodd" d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd" />
+        </svg>
+        Previous
+      </a>
+    </div>
+    <div class="hidden md:-mt-px md:flex">
+      <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"> 1 </a>
+      <!-- Current: "border-indigo-500 text-indigo-600", Default: "border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300" -->
+      <a href="#" class="border-indigo-500 text-indigo-600 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium" aria-current="page"> 2 </a>
+      <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"> 3 </a>
+      <span class="border-transparent text-gray-500 border-t-2 pt-4 px-4 inline-flex items-center text-lg font-medium"> ... </span>
+      <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"> 8 </a>
+      <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"> 9 </a>
+      <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"> 10 </a>
+    </div>
+    <div class="-mt-px w-0 flex-1 flex justify-end">
+      <a href="#" class="border-t-2 border-transparent pt-4 pl-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300">
+        Next
+        <!-- Heroicon name: solid/arrow-narrow-right -->
+        <svg class="ml-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+          <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+        </svg>
+      </a>
+    </div>
+    <pagination-controls (pageChange)="pageChanged($event)">
+    </pagination-controls>
+  </nav>
+
 </div>
 
 
@@ -95,3 +129,7 @@
     </div>
   </div>
 </div>
+
+
+
+
