--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -2,3 +2,18 @@ header {
   background-image: url("../../assets/waves.png");
   background-repeat: repeat-x;
 }
+
+.ontop {
+  margin-left: -10px;
+  margin-top: 22rem;
+}
+
+.sidebar {
+  background-image: url("../../assets/sidebar.png");
+  background-size: cover ;
+}
+
+.bgImage {
+  background-image: url("../../assets/background.png");
+  background-size: cover ;
+}
