--- a/src/app/education-feature/education/education.component.html
+++ b/src/app/education-feature/education/education.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-7xl mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 ">
   <div class="max-w-3xl mx-auto">
     <!-- data cards -->
-    <div *ngFor="let e of myEducations$ | async" class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
+    <div *ngFor="let e of myEducations$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
       <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
 
         <div class="flex flex-row">
@@ -64,71 +64,30 @@
   <!-- pagination-->
   <nav class="border-t border-gray-200 px-4 flex items-center justify-between sm:px-0">
     <div class="-mt-px w-0 flex-1 flex">
-      <a href="#" class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300">
-        <!-- Heroicon name: solid/arrow-narrow-left -->
+      <button *ngIf="currentPage > 0" class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300" (click)="pageChanged(currentPage -1)">
         <svg class="mr-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
           <path fill-rule="evenodd" d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd" />
         </svg>
         Previous
-      </a>
+      </button>
     </div>
-    <div class="hidden md:-mt-px md:flex">
-      <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"> 1 </a>
-      <!-- Current: "border-indigo-500 text-indigo-600", Default: "border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300" -->
-      <a href="#" class="border-indigo-500 text-indigo-600 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium" aria-current="page"> 2 </a>
-      <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"> 3 </a>
-      <span class="border-transparent text-gray-500 border-t-2 pt-4 px-4 inline-flex items-center text-lg font-medium"> ... </span>
-      <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"> 8 </a>
-      <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"> 9 </a>
-      <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"> 10 </a>
+    <div *ngFor="let i of [].constructor(pageAmount || 0); let page = index" class="hidden md:-mt-px md:flex">
+      <button [ngClass]="currentPage === page ? 'border-indigo-500 text-indigo-600': 'text-gray-500 hover:text-gray-700'"  class="border-transparent  hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium" (click)="pageChanged(page)"> {{page + 1}} </button>
     </div>
     <div class="-mt-px w-0 flex-1 flex justify-end">
-      <a href="#" class="border-t-2 border-transparent pt-4 pl-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300">
+      <button *ngIf="currentPage+1 < pageAmount" class="border-t-2 border-transparent pt-4 pl-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300" (click)="pageChanged(currentPage + 1)">
         Next
-        <!-- Heroicon name: solid/arrow-narrow-right -->
         <svg class="ml-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
           <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
         </svg>
-      </a>
+      </button>
     </div>
-    <pagination-controls (pageChange)="pageChanged($event)">
-    </pagination-controls>
   </nav>
-
 </div>
 
 
-<!-- modal -->
-<div *ngIf="showModal" class="fixed z-10 inset-0 overflow-y-auto" >
-  <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-    <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
-    <span class="hidden sm:inline-block sm:align-middle sm:h-screen">&#8203;</span>
-    <div class="relative inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
-      <div class="hidden sm:block absolute top-0 right-0 pt-4 pr-4">
-        <button (click)="closeDeleteModal()" type="button" class="text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-0">
-          <span class="sr-only">Close</span>
-          <fa-icon transform="grow-8" [icon]="faXmark"></fa-icon>
-        </button>
-      </div>
-      <div class="sm:flex sm:items-start">
-        <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
-          <fa-icon class="text-red-700" transform="grow-10" [icon]="faTriangleExclamation"></fa-icon>
-        </div>
-        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-          <h3 class="text-lg leading-6 font-medium text-gray-900">Remove: {{educationForm.value.diploma}}</h3>
-          <div class="mt-2">
-            <p class="text-sm text-gray-500">Are you sure you want to remove {{educationForm.value.diploma}} from your educations.</p>
-            <p class="text-sm text-gray-500 font-bold">this action cannot be undone!</p>
-          </div>
-        </div>
-      </div>
-      <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
-        <button (click)="onRemove(educationForm.value.id)" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-0 sm:ml-3 sm:w-auto sm:text-sm">Remove</button>
-        <button (click)="closeDeleteModal()" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:text-gray-500 focus:outline-none focus:ring-0 sm:mt-0 sm:w-auto sm:text-sm">Cancel</button>
-      </div>
-    </div>
-  </div>
-</div>
+<app-delete-modal [modal]=showModal [id]="educationForm.value.id" (deleteItemEvent)="onRemove($event)" (closeModalEvent)="closeDeleteModal($event)">
+</app-delete-modal>
 
 
 
