--- a/src/app/education-feature/education/education.component.html
+++ b/src/app/education-feature/education/education.component.html
@@ -1,16 +1,16 @@
 <div class="max-w-7xl mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 ">
   <div class="max-w-3xl mx-auto">
     <!-- data cards -->
-    <div *ngFor="let e of myEducations$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
+    <div *ngFor="let education of myEducations$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
       <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
 
         <div class="flex flex-row">
           <div class="basis-[97%] µ">
-            <h3 class="text-xl leading-6 font-bold text-white">{{e.diploma}}</h3>
-            <p class="mt-1 max-w-2xl text-sm text-white">{{e.description}}</p>
+            <h3 class="text-xl leading-6 font-bold text-white">{{education.diploma}}</h3>
+            <p class="mt-1 max-w-2xl text-sm text-white">{{education.description}}</p>
           </div>
           <div class="flex justify-center">
-            <button (click)="onEdit(e)" class="text-white rounded-xl w-10 h-10 hover:bg-Jorange">
+            <button (click)="onEdit(education)" class="text-white rounded-xl w-10 h-10 hover:bg-Jorange">
               <fa-icon transform="grow-12" [icon]="faPencil"></fa-icon>
             </button>
           </div>
@@ -21,32 +21,32 @@
         <dl class="grid grid-cols-1 gap-x-3 gap-y-8 sm:grid-cols-3">
           <div class="sm:col-span-1">
             <dt class="text-md font-bold text-white">School:</dt>
-            <dd class="mt-1 text-md text-white">{{e.school}} ({{e.country}})</dd>
-            <dd class="mt-1 text-lg text-white mt-2">{{e.startDate}} to {{e.endDate}}</dd>
+            <dd class="mt-1 text-md text-white">{{education.school}} ({{education.country}})</dd>
+            <dd class="mt-1 text-lg text-white mt-2">{{education.startDate}} to {{education.endDate}}</dd>
           </div>
           <div class="sm:col-span-1">
             <dt class="text-md font-bold text-white">Field of study:</dt>
-            <dd class="mt-1 text-md text-white">{{e.fieldOfStudy}}</dd>
+            <dd class="mt-1 text-md text-white">{{education.fieldOfStudy}}</dd>
           </div>
-          <div *ngIf="e.website" class="sm:col-span-1">
+          <div *ngIf="education.website" class="sm:col-span-1">
             <dt class="text-md font-bold text-white">Website:</dt>
-            <dd class="mt-1 text-md text-white">{{e.website}}</dd>
+            <dd class="mt-1 text-md text-white">{{education.website}}</dd>
           </div>
         </dl>
       </div>
       <div class="flex justify-between">
       <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
-        <input type="checkbox" (click)="toggleActive(e)"  *ngIf="e.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
-        <input type="checkbox" (click)="toggleActive(e)" *ngIf="e.active === true" checked  class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+        <input type="checkbox" (click)="toggleActive(education)"  *ngIf="education.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+        <input type="checkbox" (click)="toggleActive(education)" *ngIf="education.active === true" checked  class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
 
         <span class="ml-3" id="active">
-    <span  *ngIf="e.active === false" class="text-lg font-bold text-Jblue ">Active </span>
-          <span  *ngIf="e.active === true" class="text-lg font-bold text-Jorange ">Active </span>
+    <span  *ngIf="education.active === false" class="text-lg font-bold text-Jblue ">Active </span>
+          <span  *ngIf="education.active === true" class="text-lg font-bold text-Jorange ">Active </span>
   </span>
       </div>
 
         <div class="flex justify-center">
-        <button (click)="showDeleteModal(e)" class="text-red-600 hover:text-white bg-white rounded-xl mr-6 mb-4 w-10 h-10 hover:bg-Jorange">
+        <button (click)="showDeleteModal(education)" class="text-red-600 hover:text-white bg-white rounded-xl mr-6 mb-4 w-10 h-10 hover:bg-Jorange">
         <fa-icon transform="grow-7" [icon]="faTrashCan"></fa-icon>
       </button>
         </div>
